# atlas

./: .CMakeLists.txt.swp  CMakeLists.txt
cmake/: atlas_add_objcopy_target.cmake  atlas_add_web_library.cmake
include/atlas/: auth.hpp
include/atlas/api/: auth.hpp  auth_function_type.hpp  server.hpp
include/atlas/api/client/: call.hpp
include/atlas/auth/: router.hpp
include/atlas/db/: auth.hpp  date.hpp  date_series.hpp  temporal.hpp
include/atlas/http/: client.hpp  fwd.hpp
include/atlas/http/server/: application_router.hpp  error.hpp  exception.hpp  install_static_file.hpp  matcher.hpp  response.hpp  router.hpp  static_file.hpp  static_files.hpp  static_string.hpp  static_text.hpp  uri_type.hpp
include/atlas/jsonrpc/: auth.hpp  request.hpp  uri.hpp
include/atlas/log/: log.hpp
include/atlas/task/: base.hpp  poll.hpp  task.hpp
src/: .CMakeLists.txt.swp  CMakeLists.txt  auth.cpp
src/api/: CMakeLists.txt  auth.cpp  auth_function_type.hpp  exception.hpp  method_type.hpp  server.cpp  server.hpp
src/api/client/: call.cpp
src/auth/: CMakeLists.txt  auth.cpp  router.cpp
src/db/: CMakeLists.txt  auth.cpp  auth.hpp  comms.hpp  date.cpp  date.hpp  date_series.cpp  date_series.hpp  detail.cpp  detail.hpp  temporal.cpp  temporal.hpp
src/db/test/: auth.cpp
src/http/: CMakeLists.txt  client.cpp  client.hpp  client.ipp
src/http/server/: application_router.cpp  error.cpp  error.hpp  handler.cpp  handler.hpp  install_static_file.cpp  install_static_file.hpp  matcher.cpp  matcher.hpp  mimetypes.cpp  mimetypes.hpp  response.cpp  response.hpp  router.cpp  router.hpp  server.cpp  server.hpp  static_file.cpp  static_file.hpp  static_text.cpp  uri_type.hpp
src/http/server/test/: server.cpp
src/jsonrpc/: CMakeLists.txt  auth.cpp  auth.hpp  request.hpp  result.hpp  uri.cpp  uri.hpp
src/log/: log.cpp  log.hpp
src/task/: CMakeLists.txt  base.cpp  poll.cpp
web/: .CMakeLists.txt.swp  CMakeLists.txt  pure-base-grids.css  stacked_application.js
web/client/: stackedapplication.js  ui.js
web/client/admin/: user.js  users.js
web/client/collection/: user.js
web/client/model/: breadcrumb.js  user.js
web/client/page/: authenticationrequired.js  changepassword.js  newsignin.js  signin.js
web/client/page/admin/: users.js
web/client/service/: api.js  auth.js  ds.js  storage.js
web/client/view/: .form.js.swp  breadcrumbs.js  collection.js  form.js  genericlist.js  messagebox.js  page.js  static.js  table.js  tr.js
web/css/: defaults.css  form.css  grid.css  list.css  messagebox.css  modal.css  navigation.css  plant-theme.css  table.css  teletype-theme.css
web/less/: breadcrumbs.less  buttonbox.less  buttons.less  editable.less  input.less  mainmenu.less  messagebox.less  navigation.less  signin.less
web/service/: api.js
web/src/: static_files.cpp
web/view/: collection.js  genericlist.js  messagebox.js  page.js  static.js
